updating cfn templates
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -26,13 +26,6 @@ Resources:
     Properties:
       TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${BucketPrefix}/templates/player-vpc-template.yaml"
       TimeoutInMinutes: 10
-  WorkshopIDE:
-    Type: "AWS::Cloud9::EnvironmentEC2"
-    Properties:
-      Description: "Cloud9 Browser Based IDE for executing the modernization AWS Workshop"
-      AutomaticStopTimeMinutes: 60
-      InstanceType: t3.small
-      SubnetId: !GetAtt BasicVPC.Outputs.PublicSubnet1
   UnicornStoreRDSSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -42,7 +35,10 @@ Resources:
         FromPort: 1433
         ToPort: 1433
         CidrIp: !GetAtt BasicVPC.Outputs.VPCCIDR
-      VpcId: !GetAtt BasicVPC.Outputs.VPCId
+      - IpProtocol: tcp
+        FromPort: 1433
+        ToPort: 1433
+        CidrIp: !GetAtt BasicVPC.Outputs.2ndVPCCIDR
   UnicornStoreRDS:
     Type: "AWS::RDS::DBInstance"
     Properties:
@@ -123,12 +119,29 @@ Resources:
          ToPort: 80
          CidrIp: 0.0.0.0/0
       VpcId: !GetAtt BasicVPC.Outputs.VPCId
+  2ndUnicornStoreLbSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupName: 2ndUnicornStoreLbSecurityGroup
+      GroupDescription: Security group the the Unicornstore Application Load Balancer
+      SecurityGroupIngress:
+       - IpProtocol: tcp
+         FromPort: 80
+         ToPort: 80
+         CidrIp: 0.0.0.0/0
+      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
   UnicornStoreTaskSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupName: UnicornStoreTaskSecurityGroup
       GroupDescription: Security group the the Unicornstore Fargate Task
       VpcId: !GetAtt BasicVPC.Outputs.VPCId
+  2ndUnicornStoreTaskSecurityGroup:
+    Type: "AWS::EC2::SecurityGroup"
+    Properties:
+      GroupName: 2ndUnicornStoreTaskSecurityGroup
+      GroupDescription: Security group the the Unicornstore Fargate Task
+      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
   UnicornStoreTaskSecurityGroupIngress:
     Type: "AWS::EC2::SecurityGroupIngress"
     Properties:
@@ -137,6 +150,14 @@ Resources:
       FromPort: 80
       ToPort: 80
       SourceSecurityGroupId: !Ref UnicornStoreLbSecurityGroup
+  2ndUnicornStoreTaskSecurityGroupIngress:
+    Type: "AWS::EC2::SecurityGroupIngress"
+    Properties:
+      GroupId: !Ref 2ndUnicornStoreTaskSecurityGroup
+      IpProtocol: tcp
+      FromPort: 80
+      ToPort: 80
+      SourceSecurityGroupId: !Ref 2ndUnicornStoreLbSecurityGroup
   UnicornStoreLoadBalancer:
     Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
     Properties:
@@ -153,6 +174,22 @@ Resources:
       Type: application
       IpAddressType: ipv4
     DependsOn: UnicornStoreLbSecurityGroup
+  2ndUnicornStoreLoadBalancer:
+    Type: "AWS::ElasticLoadBalancingV2::LoadBalancer"
+    Properties:
+      Name: 2ndUnicornStore-LB
+      Scheme: internet-facing
+      SecurityGroups:
+        - !Ref 2ndUnicornStoreLbSecurityGroup
+      Subnets:
+        - !GetAtt BasicVPC.Outputs.PublicSubnet3
+        - !GetAtt BasicVPC.Outputs.PublicSubnet4
+      Tags:
+        - Key: Name
+          Value: 2ndUnicornStore-LB
+      Type: application
+      IpAddressType: ipv4
+    DependsOn: 2ndUnicornStoreLbSecurityGroup
   ECSCluster:
     Type: "AWS::ECS::Cluster"
     Properties:
@@ -190,8 +227,4 @@ Resources:
         Name: DefaultAdminUsername
         Description: UnicornStore DefaultAdminUsername
         SecretString: Administrator@test.com
-Outputs:
-  Cloud9IDE:
-    Description: "The IDE Login URL"
-    Value: !Sub "https://${AWS::Region}.console.aws.amazon.com/cloud9/ide/${WorkshopIDE}"
     
