--- a/content/secrets/cfn/player-vpc-template.yaml
+++ b/content/secrets/cfn/player-vpc-template.yaml
@@ -10,6 +10,12 @@ Mappings:
       CIDR: 10.0.0.0/24
     Public2:
       CIDR: 10.0.1.0/24
+    VPC2:
+      CIDR: 10.1.0.0/16
+    Public3:
+      CIDR: 10.1.0.0/24
+    Public4:
+      CIDR: 10.1.1.0/24
 Resources:
   VPC:
     Type: AWS::EC2::VPC
@@ -24,6 +30,24 @@ Resources:
       Tags:
       - Key: Name
         Value: "Demo VPC"
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      EnableDnsSupport: 'true'
+      EnableDnsHostnames: 'true'
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - VPC2
+        - CIDR
+      Tags:
+      - Key: Name
+        Value: "2nd Demo VPC"
       - Key: Application
         Value:
           Ref: AWS::StackName
@@ -63,6 +87,40 @@ Resources:
           Ref: AWS::StackName
       - Key: Network
         Value: Public
+  PublicSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      AvailabilityZone: !Select [ 0, !GetAZs '' ]      
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public3
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicSubnet4:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      AvailabilityZone: !Select [ 1, !GetAZs '' ]      
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public4
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
@@ -79,11 +137,38 @@ Resources:
         Ref: VPC
       InternetGatewayId:
         Ref: InternetGateway
+  2ndInternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndGatewayToInternet:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      InternetGatewayId:
+        Ref: 2ndInternetGateway
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
       VpcId:
         Ref: VPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndPublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
       Tags:
       - Key: Application
         Value:
@@ -99,6 +184,15 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId:
         Ref: InternetGateway
+  2ndPublicRoute:
+    Type: AWS::EC2::Route
+    DependsOn: 2ndGatewayToInternet
+    Properties:
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: 2ndInternetGateway
   PublicSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
@@ -113,11 +207,36 @@ Resources:
         Ref: PublicSubnet2
       RouteTableId:
         Ref: PublicRouteTable
+  PublicSubnet3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet3
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
+  PublicSubnet4RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet4
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
   PublicNetworkAcl:
     Type: AWS::EC2::NetworkAcl
     Properties:
       VpcId:
         Ref: VPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndPublicNetworkAcl:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
       Tags:
       - Key: Application
         Value:
@@ -134,11 +253,31 @@ Resources:
       RuleAction: allow
       Egress: 'false'
       CidrBlock: 0.0.0.0/0
+  2ndInboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'false'
+      CidrBlock: 0.0.0.0/0
   OutboundPublicNetworkAclEntry:
     Type: AWS::EC2::NetworkAclEntry
     Properties:
       NetworkAclId:
         Ref: PublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'true'
+      CidrBlock: 0.0.0.0/0
+  2ndOutboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
       RuleNumber: '100'
       Protocol: -1
       RuleAction: allow
@@ -158,6 +297,20 @@ Resources:
         Ref: PublicSubnet2
       NetworkAclId:
         Ref: PublicNetworkAcl
+  PublicSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet3
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
+  PublicSubnet4NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet4
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
 Outputs:
   VPCId:
     Description: VPCId of the newly created VPC
@@ -177,4 +330,23 @@ Outputs:
       Fn::FindInMap:
         - SubnetConfig
         - VPC
+        - CIDR
+  2ndVPCId:
+    Description: VPCId of the newly created VPC
+    Value:
+      Ref: 2ndVPC
+  PublicSubnet3:
+    Description: SubnetId of the public subnet 1
+    Value:
+      Ref: PublicSubnet3
+  PublicSubnet4:
+    Description: SubnetId of the public subnet 2
+    Value:
+      Ref: PublicSubnet4
+  2ndVPCCIDR:
+    Description: VPC CIDR CidrBlock
+    Value:
+      Fn::FindInMap:
+        - SubnetConfig
+        - VPC2
         - CIDR
