--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -39,6 +39,7 @@ Resources:
         FromPort: 1433
         ToPort: 1433
         CidrIp: !GetAtt BasicVPC.Outputs.2ndVPCCIDR
+      VpcId: !GetAtt BasicVPC.Outputs.VPCId	
   UnicornStoreRDS:
     Type: "AWS::RDS::DBInstance"
     Properties:
