adding 2nd version of app
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -53,7 +53,7 @@ Resources:
         FromPort: 1433
         ToPort: 1433
         CidrIp: !GetAtt BasicVPC.Outputs.2ndVPCCIDR
-      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCCIDR	
+      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
   UnicornStoreRDS:
     Type: "AWS::RDS::DBInstance"
     Properties:
