fixing old dockerfile
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/docker-compose-new.yml
+++ b/docker-compose-new.yml
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
 
-  unicornstorev1:
+  unicornstore:
     build:
       context: ./
       dockerfile: UnicornStore_v1/Dockerfile
