--- a/UnicornStore/appsettings.Production.json
+++ b/UnicornStore/appsettings.Production.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "SiteTitle": "Modernization Unicorn Store Prod",
+    "SiteTitle": "Modernization Unicorn Store v0 Prod",
     "CacheDbResults": false
   },
   "DefaultAdminUsername": "",
