--- a/UnicornStore_v1/appsettings.Development.json
+++ b/UnicornStore_v1/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "SiteTitle": "Modernization Unicorn Store Dev",
+    "SiteTitle": "Modernization Unicorn Store v1 Dev",
     "CacheDbResults": false
   },
   "DefaultAdminUsername": "",
