adding new image paths
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -26,6 +26,13 @@ Resources:
     Properties:
       TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${BucketPrefix}/templates/player-vpc-template.yaml"
       TimeoutInMinutes: 10
+  Cloud9:
+    Type: AWS::Cloud9::EnvironmentEC2
+    Properties: 
+      Description: Cloud9 Instance used for workshop
+      InstanceType: t3.small
+      Name: Flux-workshop
+      SubnetId: BasicVPC.Outputs.PublicSubnet1
   UnicornStoreRDSSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
