--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -2,12 +2,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: This template will launch the Player Account Environment for .Net Modernization Workshop.
 Parameters:
-  BucketName:
-    Type: String
-    Description: "S3 Bucket Name where nested templates are Stored in"
-  BucketPrefix:
-    Type: String
-    Description: S3 Prefix for nested template artifacts
   UnicornStoreDBUsername:
     Type: String
     Description: UnicornStore Database Username for RDS
@@ -20,19 +14,324 @@ Parameters:
     MinLength: '8'
     Type: String
     Default: BBTh123ca
+Mappings:
+  SubnetConfig:
+    VPC:
+      CIDR: 10.0.0.0/16
+    Public:
+      CIDR: 10.0.0.0/24
+    Public2:
+      CIDR: 10.0.1.0/24
+    VPC2:
+      CIDR: 10.1.0.0/16
+    Public3:
+      CIDR: 10.1.0.0/24
+    Public4:
+      CIDR: 10.1.1.0/24
 Resources:
-  BasicVPC:
-    Type: "AWS::CloudFormation::Stack"
+  VPC:
+    Type: AWS::EC2::VPC
     Properties:
-      TemplateURL: !Sub "https://${BucketName}.s3.amazonaws.com/${BucketPrefix}/templates/player-vpc-template.yaml"
-      TimeoutInMinutes: 10
+      EnableDnsSupport: 'true'
+      EnableDnsHostnames: 'true'
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - VPC
+        - CIDR
+      Tags:
+      - Key: Name
+        Value: "Demo VPC"
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndVPC:
+    Type: AWS::EC2::VPC
+    Properties:
+      EnableDnsSupport: 'true'
+      EnableDnsHostnames: 'true'
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - VPC2
+        - CIDR
+      Tags:
+      - Key: Name
+        Value: "2nd Demo VPC"
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: VPC
+      AvailabilityZone: !Select [ 0, !GetAZs '' ]
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: VPC
+      AvailabilityZone: !Select [ 1, !GetAZs '' ]      
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public2
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicSubnet3:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      AvailabilityZone: !Select [ 0, !GetAZs '' ]      
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public3
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicSubnet4:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      AvailabilityZone: !Select [ 1, !GetAZs '' ]      
+      CidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - Public4
+        - CIDR
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  InternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  GatewayToInternet:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId:
+        Ref: VPC
+      InternetGatewayId:
+        Ref: InternetGateway
+  2ndInternetGateway:
+    Type: AWS::EC2::InternetGateway
+    Properties:
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndGatewayToInternet:
+    Type: AWS::EC2::VPCGatewayAttachment
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      InternetGatewayId:
+        Ref: 2ndInternetGateway
+  PublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId:
+        Ref: VPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndPublicRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  PublicRoute:
+    Type: AWS::EC2::Route
+    DependsOn: GatewayToInternet
+    Properties:
+      RouteTableId:
+        Ref: PublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: InternetGateway
+  2ndPublicRoute:
+    Type: AWS::EC2::Route
+    DependsOn: 2ndGatewayToInternet
+    Properties:
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      GatewayId:
+        Ref: 2ndInternetGateway
+  PublicSubnet1RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet1
+      RouteTableId:
+        Ref: PublicRouteTable
+  PublicSubnet2RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet2
+      RouteTableId:
+        Ref: PublicRouteTable
+  PublicSubnet3RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet3
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
+  PublicSubnet4RouteTableAssociation:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet4
+      RouteTableId:
+        Ref: 2ndPublicRouteTable
+  PublicNetworkAcl:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId:
+        Ref: VPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  2ndPublicNetworkAcl:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId:
+        Ref: 2ndVPC
+      Tags:
+      - Key: Application
+        Value:
+          Ref: AWS::StackName
+      - Key: Network
+        Value: Public
+  InboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'false'
+      CidrBlock: 0.0.0.0/0
+  2ndInboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'false'
+      CidrBlock: 0.0.0.0/0
+  OutboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'true'
+      CidrBlock: 0.0.0.0/0
+  2ndOutboundPublicNetworkAclEntry:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
+      RuleNumber: '100'
+      Protocol: -1
+      RuleAction: allow
+      Egress: 'true'
+      CidrBlock: 0.0.0.0/0
+  PublicSubnet1NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet1
+      NetworkAclId:
+        Ref: PublicNetworkAcl
+  PublicSubnet2NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet2
+      NetworkAclId:
+        Ref: PublicNetworkAcl
+  PublicSubnet3NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet3
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
+  PublicSubnet4NetworkAclAssociation:
+    Type: AWS::EC2::SubnetNetworkAclAssociation
+    Properties:
+      SubnetId:
+        Ref: PublicSubnet4
+      NetworkAclId:
+        Ref: 2ndPublicNetworkAcl
   Cloud9:
     Type: AWS::Cloud9::EnvironmentEC2
+    DependsOn: PublicSubnet1
     Properties: 
       Description: Cloud9 Instance used for workshop
       InstanceType: t3.small
       Name: Flux-workshop
-      SubnetId: BasicVPC.Outputs.PublicSubnet1
+      SubnetId: 
+        Ref: PublicSubnet1
   UnicornStoreRDSSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -41,12 +340,21 @@ Resources:
       - IpProtocol: tcp
         FromPort: 1433
         ToPort: 1433
-        CidrIp: !GetAtt BasicVPC.Outputs.VPCCIDR
+        CidrIp:
+          Fn::FindInMap:
+            - SubnetConfig
+            - VPC
+            - CIDR
       - IpProtocol: tcp
         FromPort: 1433
         ToPort: 1433
-        CidrIp: !GetAtt BasicVPC.Outputs.2ndVPCCIDR
-      VpcId: !GetAtt BasicVPC.Outputs.VPCId	
+        CidrIp:
+          Fn::FindInMap:
+            - SubnetConfig
+            - VPC2
+            - CIDR
+      VpcId: 
+        Ref: VPC
   2ndUnicornStoreRDSSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -55,12 +363,21 @@ Resources:
       - IpProtocol: tcp
         FromPort: 1433
         ToPort: 1433
-        CidrIp: !GetAtt BasicVPC.Outputs.VPCCIDR
+        CidrIp:
+          Fn::FindInMap:
+            - SubnetConfig
+            - VPC
+            - CIDR
       - IpProtocol: tcp
         FromPort: 1433
         ToPort: 1433
-        CidrIp: !GetAtt BasicVPC.Outputs.2ndVPCCIDR
-      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
+        CidrIp:
+          Fn::FindInMap:
+            - SubnetConfig
+            - VPC2
+            - CIDR
+      VpcId: 
+        Ref: 2ndVPC
   UnicornStoreRDS:
     Type: "AWS::RDS::DBInstance"
     Properties:
@@ -89,8 +406,8 @@ Resources:
     Properties:
       DBSubnetGroupDescription: UnicornStore-SubnetGroup
       SubnetIds:
-      - !GetAtt BasicVPC.Outputs.PublicSubnet1
-      - !GetAtt BasicVPC.Outputs.PublicSubnet2
+      - !Ref PublicSubnet1
+      - !Ref PublicSubnet2
   UnicornStoreECR:
     Type: "AWS::ECR::Repository"
     Properties:
@@ -140,7 +457,7 @@ Resources:
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
-      VpcId: !GetAtt BasicVPC.Outputs.VPCId
+      VpcId: !Ref VPC
   2ndUnicornStoreLbSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
@@ -151,19 +468,19 @@ Resources:
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
-      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
+      VpcId: !Ref 2ndVPC
   UnicornStoreTaskSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupName: UnicornStoreTaskSecurityGroup
       GroupDescription: Security group the the Unicornstore Fargate Task
-      VpcId: !GetAtt BasicVPC.Outputs.VPCId
+      VpcId: !Ref VPC
   2ndUnicornStoreTaskSecurityGroup:
     Type: "AWS::EC2::SecurityGroup"
     Properties:
       GroupName: 2ndUnicornStoreTaskSecurityGroup
       GroupDescription: Security group the the Unicornstore Fargate Task
-      VpcId: !GetAtt BasicVPC.Outputs.2ndVPCId
+      VpcId: !Ref 2ndVPC
   UnicornStoreTaskSecurityGroupIngress:
     Type: "AWS::EC2::SecurityGroupIngress"
     Properties:
@@ -188,8 +505,8 @@ Resources:
       SecurityGroups:
         - !Ref UnicornStoreLbSecurityGroup
       Subnets:
-        - !GetAtt BasicVPC.Outputs.PublicSubnet1
-        - !GetAtt BasicVPC.Outputs.PublicSubnet2
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
       Tags:
         - Key: Name
           Value: UnicornStore-LB
@@ -204,8 +521,8 @@ Resources:
       SecurityGroups:
         - !Ref 2ndUnicornStoreLbSecurityGroup
       Subnets:
-        - !GetAtt BasicVPC.Outputs.PublicSubnet3
-        - !GetAtt BasicVPC.Outputs.PublicSubnet4
+        - !Ref PublicSubnet3
+        - !Ref PublicSubnet4
       Tags:
         - Key: Name
           Value: 2ndUnicornStore-LB
