changing SG rules
Signed-off-by: jonahjon <jonahjones094@gmail.com>

--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -353,6 +353,10 @@ Resources:
             - SubnetConfig
             - VPC2
             - CIDR
+      - IpProtocol: tcp
+        FromPort: 1433
+        ToPort: 1433
+        CidrIp: "0.0.0.0/0"
       VpcId: 
         Ref: VPC
   2ndUnicornStoreRDSSecurityGroup:
