peering so the v1 app can talk to the DB

--- a/content/secrets/cfn/player-template.yaml
+++ b/content/secrets/cfn/player-template.yaml
@@ -65,6 +65,31 @@ Resources:
           Ref: AWS::StackName
       - Key: Network
         Value: Public
+  VPCPeeringConnection:
+    Type: 'AWS::EC2::VPCPeeringConnection'
+    Properties:
+      VpcId: !Ref VPC
+      PeerVpcId: !Ref 2ndVPC
+  PeeringRoute2:
+    Type: 'AWS::EC2::Route'
+    Properties:
+      DestinationCidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - VPC
+        - CIDR
+      RouteTableId: !Ref 2ndPublicRouteTable
+      VpcPeeringConnectionId: !Ref VPCPeeringConnection
+  PeeringRoute1:
+    Type: 'AWS::EC2::Route'
+    Properties:
+      DestinationCidrBlock:
+        Fn::FindInMap:
+        - SubnetConfig
+        - VPC2
+        - CIDR
+      RouteTableId: !Ref PublicRouteTable
+      VpcPeeringConnectionId: !Ref VPCPeeringConnection
   PublicSubnet1:
     Type: AWS::EC2::Subnet
     Properties:
